# ros-learning

./: README.md
Notes/: 2_Packages&Nodes.md  ros2.sh
Ros2/install/: local_setup.sh  setup.sh
Ros2/install/cpp_pkg/share/ament_index/resource_index/parent_prefix_path/: cpp_pkg
Ros2/install/cpp_pkg/share/cpp_pkg/: package.sh
Ros2/install/install/: local_setup.sh  setup.ps1
Ros2/install/python_pkg/share/python_pkg/: package.sh
Ros2/log/: latest_build
install/: local_setup.sh  setup.sh
install/cpp_pkg/lib/cpp_pkg/: cpp_node
install/cpp_pkg/share/cpp_pkg/: package.sh
install/install/: setup.bash
install/log/: latest_build
install/python_pkg/lib/python_pkg/: first_node
install/python_pkg/share/python_pkg/: package.dsv  package.ps1  package.sh  package.xml
log/: latest_build
ros2/install/: local_setup.sh  setup.sh
ros2/install/cpp_pkg/lib/cpp_pkg/: cpp_node
ros2/install/cpp_pkg/share/cpp_pkg/: local_setup.sh  package.sh
ros2/install/install/: setup.sh  setup.zsh
ros2/install/python_pkg/share/python_pkg/: package.sh
ros2/log/: latest_build
ros2/src/python_pkg/python_pkg/: first_node.py  template_node.py
setup/: rqt.sh  setup_install_dep.sh  setup_ros_env.sh
src/cpp_pkg/: CMakeLists.txt
src/cpp_pkg/src/: first_node.cpp
src/python_pkg/: package.xml  setup.py
